Fixed top content alignment

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,49 @@
 body {
+    display: flex;
+    flex-direction: column;
     font-family: roboto;
+    margin: 0;
+    padding: 0;
 }
 
 .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #1F2937;
+    padding-bottom: 100px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.top-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.top-content {
+    display: flex;
+    align-items: center;
+    padding-top: 70px;
+    gap: 25px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 350px;
 }
 
 .header-logo {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: 600;
 }
 
 .description-title {
@@ -23,11 +58,13 @@ body {
 }
 
 .img-placeholder {
-    background-color: rgba(220, 220, 220, 0.506);
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(220, 220, 220, 0.506);
     height: 200px;
-    margin: 5px;
     width: 600px;
+    margin: 5px;
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -53,7 +90,7 @@ body {
 
 .rectangle {
     background-color: #3882F6;
-    height: 100px;
+    height: 50px;
     width: 500px;
     border: 1px solid;
     border-radius: 4px;
@@ -61,10 +98,15 @@ body {
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #1F2937;
     height: 72px;
     color: #E5E7EB;
 }
+
+/* CSS elements */
 
 .top-signup, .bottom-signup {
     display: inline-block;
@@ -75,6 +117,8 @@ body {
     border-radius: 0.25rem;
     border: 1px solid #3882F6;
     color: #fff;
+    height: 30px;
+    width: 80px;
     font-size: 13px;
     line-height: 30px;
     font-weight: 600;
@@ -88,5 +132,7 @@ a {
 }
 
 ul {
+    display: flex;
+    gap: 20px;
     list-style: none;
 }
